--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefectPicture.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefectPicture.cshtml
@@ -61,7 +61,6 @@
 <br />
 <header>
     <h3 style="width:85%;float:left;margin:0"></h3>
-    @*<input id="btnSave" type="button" value="Save" />*@
     <input id="btnExit" type="button" value="Exit" />
 </header>
 <br />
@@ -70,7 +69,7 @@
     <div class="grayDiv">
 
         <div class="grayInnerDiv">
-            <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" multiple />
+            <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
             <img id="Upload" class="pointer" style="height: 90%; vertical-align: top; margin-right: 5px;" src="~/Image/Icon/Upload.png" />
 
         </div>
@@ -96,26 +95,13 @@
 
     @*拍照用DOM物件*@
     <div id="CameraArea">
-
-        @*<h4>Remark</h4>
-            <input type="text" id="Rmk" style="width:90%;border:2px solid black;" name="name" value="" />
-            <br />
-            <br />
-            <img id="ImgPic" Type="Pic" style="width:100%;" />*@
+        <img id="TempImgPic" Type="Pic" style="width:100%;display:none" />
 
     </div>
 
     @*上傳圖片用DOM物件*@
 
     <div id="FileArea" style="display:none;">
-        @*<dix class=FileItem>
-                <h4>Remark</h4>
-                <input type="text" id="Rmk0" style="width:90%;border:2px solid black;" name="name" value="" />
-                <br />
-                <br />
-                <img id="ImgPic0" Type="Pic" style="width:100%;" />
-            </dix>*@
-
     </div>
 
     <div id="ImageArea">
@@ -142,7 +128,6 @@
 
     var ID_List = [];
     var Name_List = [];
-    var ImgSource = '';
     $(function () {
 
         // Screenshot Exit
@@ -150,59 +135,6 @@
             StopScreen();
             $('#Screenshot').addClass("display-None");
         });
-
-
-        $("#btnSave").click(async function () {
-
-            // 拍照處理方式
-            if (ImgSource == 'Camera') {
-                var Pic = document.querySelectorAll("#ImgPic");
-                var Rmk = $("#Rmk").val();
-
-                var Picture = {
-                    @*DetailUkey: '@DetailUkey',
-                    /RowIndex: '@RowIndex',*@
-                    Img: Pic[0].src,
-                    Remark: Rmk,
-                }
-
-                window.opener.GetImage(Picture, ImgSource);
-
-                window.close();
-            }
-
-            // 檔案上傳處理方式
-            if (ImgSource == 'File' && $('.FileItem').length > 0) {
-                var PictureList = [];
-                const fileItems = $('.FileItem');
-                var idxx = 0;
-
-                // 使用for of迴圈，可以讓每一次lool都await，完全等待完畢後才繼續後續行為
-                for (const fileItem of fileItems) {
-                    const file = document.querySelector(`#UploadPic`).files[idxx];
-                    var Rmk = $(`#Rmk${idxx}`).val();
-
-                    // blob轉成base64方式，請參考 https://ithelp.ithome.com.tw/articles/10198431
-                    // await必須包在async function裡面
-                    var base64 = await convertFile(file);
-
-
-                    var Picture = {
-                        @*Ukey: '@DetailUkey',
-                        RowIndex: '@RowIndex',*@
-                        TempImage: base64.replace("data:image/jpg;base64,", "").replace("data:image/jpeg;base64,", "").replace("data:image/png;base64,", ""),
-                        TempRemark: Rmk,
-                    }
-                    PictureList.push(Picture);
-
-                    idxx += 1;
-                }
-
-                window.opener.GetImage(PictureList, ImgSource);
-                window.close();
-            }
-        });
-
 
         $("#btnExit").click(function () {
             window.close();
@@ -232,8 +164,7 @@
                 data: JSON.stringify({ data: data, SampleRFTInspection_DetailUKey: '@Model.UKey', ID: '@Model.ID', GarmentDefectCodeID:'@Model.GarmentDefectCodeID'  }),
                 async: true,
                 success: function (data) {
-                    debugger
-
+                    
                     // 後端加入成功之後，前端下拉選單、對應圖片也要更新
 
                     var dropDownList = JSON.parse(data[0]);
@@ -247,10 +178,10 @@
                     $('#ImageArea').empty();
                     $.each(ImageList, function (idx) {
                         if (idx == 0) {
-                            $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" class="DefectImages" type="" style="width:100%;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
+                            $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" imageUkey="' + ImageList[idx].ImageUKey + '" class="DefectImages" type="" style="width:100%;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
                         }
                         else {
-                            $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" class="DefectImages" type="" style="width:100%;display:none;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
+                            $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" imageUkey="' + ImageList[idx].ImageUKey + '" class="DefectImages" type="" style="width:100%;display:none;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
                         }
                     });
                 },
@@ -263,7 +194,6 @@
 
         $("#Upload").click(function () {
 
-            ImgSourceToggle('File');
             $("#UploadPic").click();
         });
 
@@ -308,8 +238,7 @@
                     data: JSON.stringify({ list: PictureList, SampleRFTInspection_DetailUKey: '@Model.UKey', ID: '@Model.ID', GarmentDefectCodeID:'@Model.GarmentDefectCodeID'  }),
                     async: true,
                     success: function (data) {
-                        debugger
-
+                        
                         // 後端加入成功之後，前端下拉選單、對應圖片也要更新
 
                         var dropDownList = JSON.parse(data[0]);
@@ -323,10 +252,10 @@
                         $('#ImageArea').empty();
                         $.each(ImageList, function (idx) {
                             if (idx == 0) {
-                                $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" class="DefectImages" type="" style="width:100%;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
+                                $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" imageUkey="' + ImageList[idx].ImageUKey + '" class="DefectImages" type="" style="width:100%;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
                             }
                             else {
-                                $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" class="DefectImages" type="" style="width:100%;display:none;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
+                                $('#ImageArea').append('<img id="image_' + ImageList[idx].Seq + '" imageUkey="' + ImageList[idx].ImageUKey + '" class="DefectImages" type="" style="width:100%;display:none;"  src="data:image/png;base64,' + ImageList[idx].Image + '"/>');
                             }
                         });
                     },
@@ -363,45 +292,10 @@
         })
     }
 
-    function ImgSourceToggle(source) {
-        ImgSource = source;
-        switch (source) {
-            case 'Camera':
-                $("#CameraArea").show();
-                $("#FileArea").hide();
-                $("#FileArea").empty();
-                break;
-            case 'File':
-                $("#CameraArea").hide();
-                $("#FileArea").show();
-                $("#CameraArea").empty();
-                break;
-            default:
-                break;
-        }
-    }
-
     function CamInit() {
 
         $('.OpenCamera').on('click', function () {
-
-            ImgSourceToggle('Camera');
-
-            $("#CameraArea").append(`
-
-    <img id="ImgPic" Type="Pic" class="display-None" style="width:100%;" />
-`);
-
-            var Type = $(this).attr('Type');
-            var sentID = "ImgPic";
-            switch (Type) {
-                case "Pic":
-                    sentID = "ImgPic";
-                    break;
-                default:
-                    sentID = "";
-                    break;
-            }
+            var sentID = "TempImgPic";
 
             $('#Screenshot').removeClass("display-None");
             Screenshot(sentID);
