--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/MeasurementPicture.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/MeasurementPicture.cshtml
@@ -61,7 +61,6 @@
 <br />
 <header>
     <h3 style="width:85%;float:left;margin:0"></h3>
-    @*<input id="btnSave" type="button" value="Save" />*@
     <input id="btnExit" type="button" value="Exit" />
 </header>
 <br />
@@ -70,7 +69,7 @@
     <div class="grayDiv">
 
         <div class="grayInnerDiv">
-            <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" multiple />
+            <input type="file" id="UploadPic" name="name" accept=".png, .jpg, .jpeg" value="UP" style="display:none;" />
             <img id="Upload" class="pointer" style="height: 90%; vertical-align: top; margin-right: 5px;" src="~/Image/Icon/Upload.png" />
 
         </div>
@@ -96,32 +95,19 @@
 
         @*拍照用DOM物件*@
         <div id="CameraArea">
-
-            @*<h4>Remark</h4>
-            <input type="text" id="Rmk" style="width:90%;border:2px solid black;" name="name" value="" />
-            <br />
-            <br />
-            <img id="ImgPic" Type="Pic" style="width:100%;" />*@
+            <img id="TempImgPic" Type="Pic" style="width:100%;display:none" />
 
         </div>
 
         @*上傳圖片用DOM物件*@
 
         <div id="FileArea" style="display:none;">
-            @*<dix class=FileItem>
-                <h4>Remark</h4>
-                <input type="text" id="Rmk0" style="width:90%;border:2px solid black;" name="name" value="" />
-                <br />
-                <br />
-                <img id="ImgPic0" Type="Pic" style="width:100%;" />
-            </dix>*@
-
         </div>
     
         <div id="ImageArea">
             @foreach (var img in Model.Images)
             {
-                string isShow = img.Seq == 1 ? string.Empty : "display:none";
+                string isShow = img.Seq == Model.Images.FirstOrDefault().Seq ? string.Empty : "display:none";
 
                 var byteImage = img == null || img.Image is null ? new byte[1] : img.Image;
                 var base64 = Convert.ToBase64String(byteImage);
@@ -142,7 +128,6 @@
 
     var ID_List = [];
     var Name_List = [];
-    var ImgSource = '';
     $(function () {
 
         // Screenshot Exit
@@ -150,59 +135,6 @@
             StopScreen();
             $('#Screenshot').addClass("display-None");
         });
-
-
-        $("#btnSave").click(async function () {
-
-            // 拍照處理方式
-            if (ImgSource == 'Camera') {
-                var Pic = document.querySelectorAll("#ImgPic");
-                var Rmk = $("#Rmk").val();
-
-                var Picture = {
-                    @*DetailUkey: '@DetailUkey',
-                    /RowIndex: '@RowIndex',*@
-                    Img: Pic[0].src,
-                    Remark: Rmk,
-                }
-
-                window.opener.GetImage(Picture, ImgSource);
-
-                window.close();
-            }
-
-            // 檔案上傳處理方式
-            if (ImgSource == 'File' && $('.FileItem').length > 0) {
-                var PictureList = [];
-                const fileItems = $('.FileItem');
-                var idxx = 0;
-
-                // 使用for of迴圈，可以讓每一次lool都await，完全等待完畢後才繼續後續行為
-                for (const fileItem of fileItems) {
-                    const file = document.querySelector(`#UploadPic`).files[idxx];
-                    var Rmk = $(`#Rmk${idxx}`).val();
-
-                    // blob轉成base64方式，請參考 https://ithelp.ithome.com.tw/articles/10198431
-                    // await必須包在async function裡面
-                    var base64 = await convertFile(file);
-
-
-                    var Picture = {
-                        @*Ukey: '@DetailUkey',
-                        RowIndex: '@RowIndex',*@
-                        TempImage: base64.replace("data:image/jpg;base64,", "").replace("data:image/jpeg;base64,", "").replace("data:image/png;base64,", ""),
-                        TempRemark: Rmk,
-                    }
-                    PictureList.push(Picture);
-
-                    idxx += 1;
-                }
-
-                window.opener.GetImage(PictureList, ImgSource);
-                window.close();
-            }
-        });
-
 
         $("#btnExit").click(function () {
             window.close();
@@ -229,7 +161,7 @@
                 data: JSON.stringify({ data: data, OrderID : '@Model.OrderID' }),
                 async: true,
                 success: function (data) {
-                    debugger
+                    
 
                     // 後端加入成功之後，前端下拉選單、對應圖片也要更新
 
@@ -260,7 +192,6 @@
 
         $("#Upload").click(function () {
 
-            ImgSourceToggle('File');
             $("#UploadPic").click();
         });
 
@@ -304,8 +235,7 @@
                     contentType: "application/json; charset=utf-8",
                     data: JSON.stringify({ list: PictureList, OrderID : '@Model.OrderID' }),
                     async: true,
-                    success: function (data) {
-                        debugger
+                    success: function (data) {                        
 
                         // 後端加入成功之後，前端下拉選單、對應圖片也要更新
 
@@ -360,45 +290,11 @@
         })
     }
 
-    function ImgSourceToggle(source) {
-        ImgSource = source;
-        switch (source) {
-            case 'Camera':
-                $("#CameraArea").show();
-                $("#FileArea").hide();
-                $("#FileArea").empty();
-                break;
-            case 'File':
-                $("#CameraArea").hide();
-                $("#FileArea").show();
-                $("#CameraArea").empty();
-                break;
-            default:
-                break;
-        }
-    }
-
     function CamInit() {
 
         $('.OpenCamera').on('click', function () {
 
-            ImgSourceToggle('Camera');
-
-            $("#CameraArea").append(`
-
-    <img id="ImgPic" Type="Pic" class="display-None" style="width:100%;" />
-`);
-
-            var Type = $(this).attr('Type');
-            var sentID = "ImgPic";
-            switch (Type) {
-                case "Pic":
-                    sentID = "ImgPic";
-                    break;
-                default:
-                    sentID = "";
-                    break;
-            }
+            var sentID = "TempImgPic";
 
             $('#Screenshot').removeClass("display-None");
             Screenshot(sentID);
