--- a/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_DF.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Shared/ScreenShot_ForRFTInsp_DF.cshtml
@@ -59,6 +59,7 @@
                 img.src = src;
                 imgSet.src = src;
                 //OtherSetting(ImgID, 'a' + ImgID);
+                ReloadImg();
             }
         };
 
