ISP20220596 - 修正圖片存檔方式

--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -170,7 +170,7 @@
                                         }
                                     </td>
                                     <td>
-                                        @if (item.Front != null || item.Back != null || item.Back != null)
+                                        @if (item.Front != null || item.Side != null || item.Back != null)
                                         {
                                             
                                             <a href="@Url.Action("DownloadPictures", ViewContext.RouteData.GetRequiredString("Controller")
