--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -122,7 +122,7 @@
                                 <p idx="SizeCode"></p>
                             </th>
                             <th style="width:30vw">
-                                <input type="button" class="site-btn btn-blue" onclick="ReloadData();" value="Clear" style="width: 80%;border-bottom: 1px solid black;">
+                                <input type="button" class="site-btn btn-blue" onclick="ReloadData();" value="Clear" style="width: 80%; border-style: none;">
                             </th>
                             <th style="width:10vw">
                                 <p>Diff</p>
@@ -672,7 +672,7 @@
             <th style="width:8vw"><p>Tol(+)</p></th>
             <th style="width:8vw"><p>Tol(-)</p></th>
             <th style="width:10vw"><p idx='SizeCode'>${dropSize.value}</p></th>
-            <th style="width:30vw"><input type="button" class="site-btn btn-blue" onclick="ReloadData();" value="Clear" style="width: 80%;border-bottom: 1px solid black;"></th>
+            <th style="width:30vw"><input type="button" class="site-btn btn-blue" onclick="ReloadData();" value="Clear" style="width: 80%;border-style:none;"></th>
             <th style="width:10vw"><p>Diff</p></th>
             </tr>`;
         }
